--- a/wrapper/index.html
+++ b/wrapper/index.html
@@ -105,7 +105,8 @@
 
     <!-- Main Application -->
     <div class="main-content">
-        <iframe src="http://localhost:8501" title="Streamlit App"></iframe>
+        <!-- [IMPORTANT] Replace with your deployed Streamlit App URL -->
+        <iframe src="https://YOUR-STREAMLIT-APP-URL.streamlit.app" title="Streamlit App"></iframe>
     </div>
 
     <!-- Right Sidebar (160x600 Wide Skyscraper) -->
