Fix iframe URL to real app

--- a/wrapper/index.html
+++ b/wrapper/index.html
@@ -105,8 +105,8 @@
 
     <!-- Main Application -->
     <div class="main-content">
-        <!-- [IMPORTANT] Replace with your deployed Streamlit App URL -->
-        <iframe src="https://YOUR-STREAMLIT-APP-URL.streamlit.app" title="Streamlit App"></iframe>
+        <iframe src="https://benjaminfinanceanalysis-b6xwsnvpb7ruukm3hmjmhi.streamlit.app"
+            title="Streamlit App"></iframe>
     </div>
 
     <!-- Right Sidebar (160x600 Wide Skyscraper) -->
