Add embed param to iframe

--- a/wrapper/index.html
+++ b/wrapper/index.html
@@ -105,7 +105,7 @@
 
     <!-- Main Application -->
     <div class="main-content">
-        <iframe src="https://benjaminfinanceanalysis-b6xwsnvpb7ruukm3hmjmhi.streamlit.app"
+        <iframe src="https://benjaminfinanceanalysis-b6xwsnvpb7ruukm3hmjmhi.streamlit.app/?embed=true"
             title="Streamlit App"></iframe>
     </div>
 
