Hide streamlit footer and force dark background

--- a/wrapper/index.html
+++ b/wrapper/index.html
@@ -76,6 +76,8 @@
             height: 100%;
             border: none;
             flex: 1;
+            background-color: #0e1117;
+            /* Dark background */
         }
 
         /* Responsive: Hide sidebars on small screens */
