--- a/wrapper/index.html
+++ b/wrapper/index.html
@@ -108,7 +108,7 @@
     <!-- Main Application -->
     <div class="main-content">
         <iframe src="https://benjaminfinanceanalysis-b6xwsnvpb7ruukm3hmjmhi.streamlit.app/?embed=true&theme=dark"
-            title="Streamlit App"></iframe>
+            style="border:none" title="Streamlit App"></iframe>
     </div>
 
     <!-- Right Sidebar (160x600 Wide Skyscraper) -->
