hide border again

--- a/wrapper/index.html
+++ b/wrapper/index.html
@@ -108,7 +108,8 @@
     <!-- Main Application -->
     <div class="main-content">
         <iframe src="https://benjaminfinanceanalysis-b6xwsnvpb7ruukm3hmjmhi.streamlit.app/?embed=true&theme=dark"
-            style="border:none" title="Streamlit App"></iframe>
+            style="border:none" , framespacing="0" , marginheight="0" , marginwidth="0" , scrolling="no" , vspace="0" ,
+            hspace="0" , title="Streamlit App"></iframe>
     </div>
 
     <!-- Right Sidebar (160x600 Wide Skyscraper) -->
