--- a/wrapper/index.html
+++ b/wrapper/index.html
@@ -109,7 +109,7 @@
     <div class="main-content">
         <iframe src="https://benjaminfinanceanalysis-b6xwsnvpb7ruukm3hmjmhi.streamlit.app/?embed=true&theme=dark"
             style="border:none" , framespacing="0" , marginheight="0" , marginwidth="0" , scrolling="no" , vspace="0" ,
-            hspace="0" , title="Streamlit App"></iframe>
+            hspace="0" , title="Streamlit App" , frameBorder="0"></iframe>
     </div>
 
     <!-- Right Sidebar (160x600 Wide Skyscraper) -->
