--- a/wrapper/index.html
+++ b/wrapper/index.html
@@ -108,8 +108,9 @@
     <!-- Main Application -->
     <div class="main-content">
         <iframe src="https://benjaminfinanceanalysis-b6xwsnvpb7ruukm3hmjmhi.streamlit.app/?embed=true&theme=dark"
-            style="border:none" , framespacing="0" , marginheight="0" , marginwidth="0" , scrolling="no" , vspace="0" ,
-            hspace="0" , title="Streamlit App" , frameBorder="0"></iframe>
+            style="width: 100%; height: 100%; border: none;" title="Streamlit App"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe>
     </div>
 
     <!-- Right Sidebar (160x600 Wide Skyscraper) -->
